# University

./: README.md  calculate_sum.asm  func_implementation.asm  mul_arrays2.asm  prog.asm
Assembly/: 2.asm  3.asm  cn.asm  final_hw.asm  final_hw_extended.asm  more_numbers.asm  mul_arrays.asm  numbers.asm  others_project2.asm  others_projekt.asm
Datenstrukturen_und_Algorithmen/: LAB1_modify_current.txt  LAB3_invert_bag.txt  LAB3_invert_container().txt  bst_smap_descr.txt  find_pos_hash.txt
Datenstrukturen_und_Algorithmen/Matrix_hashtabel_unverkettete/: CMakeLists.txt  Matrix.h
L2_2/: CMakeLists.txt  duration_test.cpp
L3/: CMakeLists.txt  main.cpp
L4/: FruitApp.cpp
L4/Test/: FruitTests.h
Lab1/: u12a.py  u2a.py  u2b.py  u3a.py  u3b.py  u4a.py
Lab2/: lab2.py  u2.py  u3.py  u4.py  u6.py  u7.py
Lab3/: u1.py  u2.py  u3_zwei hauser.py  zusam123.py
Labor2/: CMakeLists.txt  Graph.cpp  main.cpp
Labor3/: Graph.h  data.txt  main.cpp
Labor4/: CMakeLists.txt  Graph.cpp  date.in
Labor5/: Graph.cpp  Graph.h  date.in
Labor6/: CMakeLists.txt  GewichteterGraph.cpp  main.cpp
Matrix_hashtabel_unverkettete/: Matrix.cpp
Multi_map_SLL/: MultiMap.cpp  MultiMap.h  ShortTest.cpp
Objekt_Orientiert_Programmierung/L4/: CMakeLists.txt
Objekt_Orientiert_Programmierung/L4/Domain/: Fruit.cpp  Fruit.h
Objekt_Orientiert_Programmierung/L4/Test/: FruitTests.cpp
Programmierungsmethode/: README.md
restaurant/: bestellung.data  rest_cost.txt  rest_drink.txt
seminar1/: u2.cpp  u3.cpp
seminar2/: date.out
set_1/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SetIterator.h
(+97 files in other folders)
